[package]
name = "ada-url"
authors = [
   "Yagiz Nizipli <yagiz@nizipli.com>",
   "Daniel Lemire <daniel@lemire.me>",
   "LongYinan <github@lyn.one>",
   "Boshen <boshenc@gmail.com>"
 ]
version = "1.0.2"
edition = "2021"
description = "Fast WHATWG Compliant URL parser"
documentation = "https://docs.rs/ada-url"
readme = "README.md"
keywords = ["url", "parser", "whatwg", "performance"]
categories = ["parser-implementations", "web-programming", "encoding"]
repository = "https://ada-url.com"
license = "MIT OR Apache-2.0"
include = ["src/**/*", "LICENSE-*", "README.md", "tests/**", "deps/**"]

[[bench]]
name = "parse"
path = "bench/parse.rs"
harness = false

[features]
# pass `cpp_set_stdlib("c++")` to `cc`
libcpp = []

[dependencies]
thiserror = "1"

[dev-dependencies]
criterion = "0.4"
url = "2" # Used by benchmarks

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
link_args = "0.6"
