[package]
name = "ada-url"
authors = [
   "Yagiz Nizipli <yagiz@nizipli.com>",
   "Daniel Lemire <daniel@lemire.me>",
   "LongYinan <github@lyn.one>",
   "Boshen <boshenc@gmail.com>"
 ]
version = "1.3.1"
edition = "2021"
description = "Fast WHATWG Compliant URL parser"
documentation = "https://docs.rs/ada-url"
readme = "README.md"
keywords = ["url", "parser", "whatwg", "performance"]
categories = ["parser-implementations", "web-programming", "encoding"]
repository = "https://ada-url.com"
license = "MIT OR Apache-2.0"

[[bench]]
name = "parse"
path = "bench/parse.rs"
harness = false

[features]
# pass `cpp_set_stdlib("c++")` to `cc`
libcpp = []
# enables serde serialization/deserialization support
serde = ["dep:serde"]

[dependencies]
thiserror = "1"
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
url = "2" # Used by benchmarks
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
cc = { version = "1.0.83", features = ["parallel"] }
link_args = "0.6"

[package.metadata.docs.rs]
features = ["serde"]

[package.metadata.playground]
features = ["serde"]
